corrects contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ nav ul li a{
 .search input{
     height: 50%;
     width: 100%;
-    background-color: aliceblue;
+    background-color: white;
     border-radius: 5%;
     margin-top: 3%;
     margin-bottom: 0;
@@ -151,13 +151,13 @@ nav ul li a{
 }
 
 main{
-    background-color: #a98bbd;
+    background-color: #730099;
     margin: 0;
     padding: 10%;
 }
 
 main p{
-    color: aliceblue;
+    color: white;
     text-align: center;
 }
 
